tests/analyzer/errors/match_string.ray
fn main() {
    match "any" {
        "one" => {}
        "two" => {}
        "one" => {}
        _ => {}
    }

    match "any" {
        "one" => {}
    }
}
